objects/Case_assignment_rule__c.object
<CustomObject>
    <fields>
        <fullName>Case_Assignment__c</fullName>
        <label>Case Assignment</label>
        <referenceTo>Case_Assignment__c</referenceTo>
        <relationshipLabel>Case assignment rules</relationshipLabel>
        <relationshipName>Case_assignment_rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Feature__c.Active_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Case assignment rules</relationshipLabel>
        <relationshipName>Case_assignment_rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Feature_Level_1__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_1__c</referenceTo>
        <relationshipLabel>Case assignment rules</relationshipLabel>
        <relationshipName>Case_assignment_rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Queue_Id__c</fullName>
        <label>User / Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Queue_Name__c</fullName>
        <label>User / Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case assignment rule</label>
    <nameField>
        <label>Case assignment rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case assignment rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>